--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@ionic/angular": "^8.0.0",
+    "@ngrx/effects": "^18.1.1",
     "@ngrx/store": "^18.1.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
@@ -46,6 +47,7 @@
     "@angular/language-service": "^18.0.0",
     "@capacitor/cli": "6.2.0",
     "@ionic/angular-toolkit": "^11.0.1",
+    "@ngrx/eslint-plugin": "^18.1.1",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -60,8 +62,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.0",
-    "@ngrx/eslint-plugin": "^18.1.1"
+    "typescript": "~5.4.0"
   },
   "description": "An Ionic project"
 }
